# oxidize2020-rtic

./: .gitignore  Cargo.toml  Embed.toml  README.md  memory.x
.cargo/: config
examples/: 1_app.rs  2_init_idle_tasks.rs  3_spawn.rs  4_spawn_with_priority.rs  5_schedule.rs  6_resources_locks.rs  7_message_passing.rs  8_blinky.rs  9_button.rs
src/: main.rs
